# ankivert

./: .gitignore  README.md  ankiconnect_client.py  card_parser.py  config.py  ledger.py  local_config.example.json  pyproject.toml  requirements.txt  sync_service.py  test_card_parser.py  test_ledger.py  test_sync_service.py  tui.py
anki_vert.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ankivert/: ankiconnect_client.py  card_parser.py  config.py  ledger.py  models.py  sync_service.py  tui.py  tui.tcss
tests/: test_card_parser.py  test_ledger.py  test_sync_service.py
