[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "anki-vert"
version = "0.1.0"
description = "Converts Obsidian markdown notes into Anki flashcards"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "textual>=8",
]

[project.optional-dependencies]
dev = ["pytest>=9"]
