[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anki-vert"
version = "0.1.0"
description = "Converts Obsidian markdown notes into Anki flashcards"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "textual>=8",
]

[project.scripts]
ankivert = "ankivert.tui:main"

[project.optional-dependencies]
dev = ["pytest>=9"]

[tool.setuptools.packages.find]
include = ["ankivert*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
